// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Lists List Button Items: Components/Lists List Button Items 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 20px;
  fill: #757575;
}

.c5.c5 {
  padding: 0px 0px 0px 8px;
  font-size: 0.875rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 20px;
  color: #212121;
}

.c0.c0 {
  padding: 12px 16px;
  height: 36px;
  width: 240px;
  border: 1px solid #eee;
  margin-bottom: 8px;
  border-radius: 4px;
  background-color: #fff;
}

.c0.c0:hover {
  background-color: rgba(97,97,97,0.05);
}

.c0.c0:last-child {
  margin-bottom: 0;
}

.c0.c0.c0:focus,
.c0.c0.c0.selected {
  background-color: #4475fd;
  border: none;
}

.c0.c0.c0:focus > .c4,
.c0.c0.c0.selected > .c4 {
  color: #fff;
}

.c0.c0.c0:focus > .c1 svg,
.c0.c0.c0.selected > .c1 svg {
  fill: #fff;
}

<div>
  <ul
    className="MuiList-root MuiList-padding"
  >
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root c0 MuiListItem-gutters MuiListItem-button Mui-selected selected"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        className="c1 mention icon c2"
      >
        <svg
          className="c3"
          role="img"
          size="medium"
        >
          <use
            href="#icon-mention"
            xlinkHref="#icon-mention"
          />
        </svg>
      </span>
      <p
        className="MuiTypography-root c4 c5 MuiTypography-body1"
      >
        Mentions
      </p>
    </div>
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root c0 MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        className="c1 bookmark icon c2"
      >
        <svg
          className="c3"
          role="img"
          size="medium"
        >
          <use
            href="#icon-bookmark"
            xlinkHref="#icon-bookmark"
          />
        </svg>
      </span>
      <p
        className="MuiTypography-root c4 c5 MuiTypography-body1"
      >
        Bookmarks
      </p>
    </div>
  </ul>
</div>
`;

exports[`Storyshots Components/Lists Simple List: Components/Lists Simple List 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 24px;
}

.c0.c0 {
  padding: 8px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
}

.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 36px;
  height: 36px;
  margin-right: 8px;
  background-color: #f5f6fb;
  border-radius: 4px;
  overflow: hidden;
  min-width: unset;
}

.c4 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c4.c4 {
  padding: 0;
}

.c4.c4 .list-item-primary {
  display: block;
  color: #212121;
  font-size: 0.875rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 20px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.c4.c4 .list-item-secondary {
  display: block;
  color: #757575;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.c4.c4.multiline {
  margin: 0;
}

.c5.c5 {
  background-color: #e0e0e0;
}

<div>
  <ul
    className="MuiList-root MuiList-padding"
  >
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root c0 MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root c1"
      >
        <span
          className="  icon c2"
        >
          <svg
            className="c3"
            role="img"
          >
            <use
              href="#undefined"
              xlinkHref="#undefined"
            />
          </svg>
        </span>
      </div>
      <div
        className="MuiListItemText-root c4"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary list-item-primary MuiTypography-body1"
        >
          Inbox
        </span>
      </div>
    </div>
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root c0 MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root c1"
      >
        <span
          className="  icon c2"
        >
          <svg
            className="c3"
            role="img"
          >
            <use
              href="#undefined"
              xlinkHref="#undefined"
            />
          </svg>
        </span>
      </div>
      <div
        className="MuiListItemText-root c4"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary list-item-primary MuiTypography-body1"
        >
          Drafts
        </span>
      </div>
    </div>
  </ul>
  <hr
    className="MuiDivider-root c5"
  />
  <ul
    className="MuiList-root MuiList-padding"
  >
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root c0 MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemText-root c4"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary list-item-primary MuiTypography-body1"
        >
          Trash
        </span>
      </div>
    </div>
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root c0 MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemText-root c4"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary list-item-primary MuiTypography-body1"
        >
          Spam
        </span>
      </div>
    </div>
  </ul>
</div>
`;
